fix z-index

--- a/components/Dropdown/index.module.scss
+++ b/components/Dropdown/index.module.scss
@@ -6,7 +6,6 @@
 	height: fit-content;
 	cursor: pointer;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	z-index: -1;
 
 	&:focus-visible {
 		outline: none;
